There was a reason for the specificity, reverting bootstrap changes

--- a/app/templates/source/styles/imports/boilerplate.scss
+++ b/app/templates/source/styles/imports/boilerplate.scss
@@ -10,5 +10,5 @@
 
 // Import bootstrap variables for use in all templates
 <% if (includeBootstrap) { %>
-@import "bootstrap.scss";
+@import "bootstrap_variables.scss";
 <% } %>
