Bourbon install fixed to latest stable version supporting libsass (Sass 3.2 spec, not 3.3 in latest bourbon)

--- a/app/templates/bourbon/bourbon.scss
+++ b/app/templates/bourbon/bourbon.scss
@@ -1,3 +1,3 @@
 // Bourbon can be installed or updated by running:
-// bower install bourbon --save
-@import "bourbon/app/assets/stylesheets/bourbon";
+// bower install bourbon#3.x --save
+@import "bourbon/dist/bourbon";
