Fixed an issue that caused CSS @page rule to be made invalid by the beautifier. CSS now beautified by default, @page rule moved into global.scss to prevent the nested @media issue.

--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -83,6 +83,12 @@ textarea {
 @-ms-viewport{
     width: device-width;
 }
+
+// Print style that shouldn't belong to print.scss to avoid the css beautifier from killing
+// the @ syntax inside media queries
+@page {
+    margin: 0.5cm;
+}
 <% if (includeBootstrap) { %>
 
 /*
