--- a/app/templates/source/html/_head-ie8.html
+++ b/app/templates/source/html/_head-ie8.html
@@ -1,15 +1,24 @@
-        <!-- build:css({{dest}}) styles/global.css -->
-            <!-- import:sass {{source}}/styles/global.scss [<link rel="stylesheet" href="styles/global.css" />] -->
-            <!-- import:bowerCSS -->
+        <!-- build:sass dist:styles/global.css -->
+                <!-- import:css source:styles/global.scss -->
+                <!-- import:css module:**/css/variables.scss,module:**/css/global.scss -->
+                <!-- import:content module:**/html/_bowercss.html -->
         <!-- endbuild -->
-        <!-- import:sass {{source}}/styles/medium.scss [<link rel="stylesheet" href="styles/medium.css" media="(min-width: <%= mediumMQ %>)" />] -->
-        <!-- import:sass {{source}}/styles/wide.scss [<link rel="stylesheet" href="styles/wide.css" media="(min-width: <%= wideMQ %>)" />] --><% if (ie8) { %>
+        <!-- build:sass dist:styles/medium.css { "media": "(min-width: <%= mediumMQ %>)" } -->
+                <!-- import:css source:styles/medium.scss -->
+                <!-- import:css module:**/css/variables.scss,module:**/css/medium.scss -->
+        <!-- endbuild -->
+        <!-- build:sass dist:styles/wide.css { "media": "(min-width: <%= wideMQ %>)" } -->
+                <!-- import:css source:styles/wide.scss -->
+                <!-- import:css module:**/css/variables.scss,module:**/css/wide.scss -->
+        <!-- endbuild --><% if (ie8) { %>
         <!--[if lte IE 8]>
-            <!-- import:sass {{source}}/styles/medium.scss [<link rel="stylesheet" href="styles/medium.css" />] -->
-            <!-- import:sass {{source}}/styles/wide.scss [<link rel="stylesheet" href="styles/wide.css"  />] -->
+            <link rel="stylesheet" href="styles/medium.scss" />
+            <link rel="stylesheet" href="styles/wide.scss" />
         <![endif]--><% } %>
-        <!-- import:sass {{source}}/styles/print.scss [<link rel="stylesheet" href="styles/print.css" media="print" />] -->
-
-        <!-- build:js js/vendor/modernizr.min.js -->
-            <!-- import:js {{bowerdir}}/modernizr/modernizr.js -->
+        <!-- build:sass dist:styles/print.scss { "media": "print" } -->
+            <!-- import:css source:styles/print.scss -->
+            <!-- import:css module:**/css/print.scss -->
+        <!-- endbuild -->
+        <!-- build:js dist:js/vendor/modernizr.min.js -->
+            <!-- import:js bower:modernizr/modernizr.js -->
         <!-- endbuild -->
