--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="favicon.ico">
         <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
         <link rel="apple-touch-icon-precomposed" href="{{file_dest}}/logo-144x144.png">
-{{_head_html}}
+<!-- import:content source:html/_head.html -->
     </head>
     <% if (ieConditionals) { %><!--[if lt IE 7]><body class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
     <!--[if IE 7]><body class="no-js lt-ie9 lt-ie8"><![endif]-->
@@ -32,6 +32,6 @@
         </footer><!-- /.footer -->
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
-{{_foot_html}}
+<!-- import:content source:html/_foot.html -->
     </body>
 </html>
