Changed the way imports occur for modern vs older IE in the Sass templates. This hopefully solves Issue #29

--- a/app/templates/source/styles/medium.scss
+++ b/app/templates/source/styles/medium.scss
@@ -1,3 +1,4 @@
+<% if (ie8) { %>
 /**
  * version: {{version}}
  * file:    {{file}}
@@ -11,7 +12,7 @@
  */
 
 @import "boilerplate.scss";
-
+<% } %>
 /*
 --------------------
 Modules
