Fixed a typo in the name of the generated print stylesheet

--- a/app/templates/source/html/_head-ie8.html
+++ b/app/templates/source/html/_head-ie8.html
@@ -15,7 +15,7 @@
             <link rel="stylesheet" href="styles/medium.scss" />
             <link rel="stylesheet" href="styles/wide.scss" />
         <![endif]--><% } %>
-        <!-- build:sass dist:styles/print.scss { "media": "print" } -->
+        <!-- build:sass dist:styles/print.css { "media": "print" } -->
             <!-- import:css source:styles/print.scss -->
             <!-- import:css module:**/css/print.scss -->
         <!-- endbuild -->
