Fixed order and inclusion of module global sass and variables

--- a/app/templates/source/html/_head-single.html
+++ b/app/templates/source/html/_head-single.html
@@ -1,9 +1,10 @@
         <!-- build:sass dist:styles/main.css -->
+            <!-- import:css module:**/css/variables.scss -->
             <!-- build:css tmp:styles/global.scss -->
                 <!-- import:css source:styles/global.scss -->
                 <!-- import:content module:**/html/_css.html -->
+                <!-- import:css module:**/css/global.scss -->
             <!-- endbuild -->
-            <!-- import:css module:**/css/variables.scss -->
             <!-- build:css tmp:styles/medium.scss { "media": "(min-width: <%= mediumMQ %>)" } -->
                 <!-- import:css source:styles/medium.scss -->
                 <!-- import:css module:**/css/medium.scss -->
