--- a/app/templates/source/html/_head-single.html
+++ b/app/templates/source/html/_head-single.html
@@ -13,7 +13,7 @@
                 <!-- import:css source:styles/wide.scss -->
                 <!-- import:css module:**/css/wide.scss -->
             <!-- endbuild -->
-            <!-- build:css tmp:styles/print.css { "media": "print" } -->
+            <!-- build:css tmp:styles/print.scss { "media": "print" } -->
                 <!-- import:css source:styles/print.scss -->
                 <!-- import:css module:**/css/print.scss -->
             <!-- endbuild -->
