Adjusted head contents a bit to re-use those common elements instead of having to repeat them. Variables for modules now sourced only in the css combinator so they are placed AFTER source/styles/imports/variables.scss allowing for those variables to be truly global.

--- a/app/templates/source/html/_head-ie8.html
+++ b/app/templates/source/html/_head-ie8.html
@@ -1,3 +1,7 @@
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico">
+        <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+        <link rel="apple-touch-icon-precomposed" href="{{file_dest}}/logo-144x144.png">
         <!-- build:sass dist:styles/global.css -->
                 <!-- import:css source:styles/global.scss -->
                 <!-- import:css module:**/css/variables.scss,module:**/css/global.scss -->
