--- a/app/templates/source/html/_head-single.html
+++ b/app/templates/source/html/_head-single.html
@@ -1,8 +1,12 @@
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="favicon.ico">
+        <!--[if IE]><link rel="shortcut icon" href="favicon.ico"><![endif]-->
+        <link rel="apple-touch-icon-precomposed" href="{{file_dest}}/logo-144x144.png">
         <!-- build:sass dist:styles/main.css -->
-            <!-- import:css module:**/css/variables.scss -->
             <!-- build:css tmp:styles/global.scss -->
                 <!-- import:css source:styles/global.scss -->
                 <!-- import:content module:**/html/_css.html -->
+                <!-- import:css module:**/css/variables.scss -->
                 <!-- import:css module:**/css/global.scss -->
             <!-- endbuild -->
             <!-- build:css tmp:styles/medium.scss { "media": "(min-width: <%= mediumMQ %>)" } -->
