Fixed an issue with the IE 8 head.html where the files were incorrectly called .scss instead of .css

--- a/app/templates/source/html/_head-ie8.html
+++ b/app/templates/source/html/_head-ie8.html
@@ -16,8 +16,8 @@
                 <!-- import:css module:**/css/variables.scss,module:**/css/wide.scss -->
         <!-- endbuild --><% if (ie8) { %>
         <!--[if lte IE 8]>
-            <link rel="stylesheet" href="styles/medium.scss" />
-            <link rel="stylesheet" href="styles/wide.scss" />
+            <link rel="stylesheet" href="styles/medium.css" />
+            <link rel="stylesheet" href="styles/wide.css" />
         <![endif]--><% } %>
         <!-- build:sass dist:styles/print.css { "media": "print" } -->
             <!-- import:css source:styles/print.scss -->
