--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>{{name}} - (version {{version}})</title>
-<!-- import:content source:html/_head.html -->
+<% if (ie8) { %><!-- import:content source:html/_head-ie8.html --><% } else { %><!-- import:content source:html/_head-single.html --><% } %>
     </head>
     <% if (ieConditionals) { %><!--[if lt IE 7]><body class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
     <!--[if IE 7]><body class="no-js lt-ie9 lt-ie8"><![endif]-->
