--- a/app/templates/source/html/fragments/_foot.html
+++ b/app/templates/source/html/fragments/_foot.html
@@ -13,9 +13,7 @@
     file to be picked up in the optimisation phase and minified reducing it's final file size.
 @@-->    <!-- build:js dist:js/plugins.min.js -->
         <!-- import:js source:js/plugins.js -->
-        <!-- import:content module:**/html/_plugin.html --><% if (includeBootstrap) { %>
-        <!-- import:content source:html/fragments/bootstrap.html -->
-        <% } %>
+        <!-- import:content module:**/imports/_js.html -->
         <!-- import:js module:**/js/plugin.js -->
     <!-- endbuild -->
 <!--@@
