--- a/app/templates/source/styles/print.scss
+++ b/app/templates/source/styles/print.scss
@@ -1,3 +1,4 @@
+<% if (ie8) { %>
 /**
  * {{name}}
  * Print CSS
@@ -8,6 +9,7 @@
  * change log:
  *     {{date}} - First revision
  */
+<% } %>
 
 // HTML 5 Boilerplate Print Stylesheet 
 * {
