--- a/app/templates/source/html/fragments/_head-single.html
+++ b/app/templates/source/html/fragments/_head-single.html
@@ -5,7 +5,7 @@
         <!-- build:sass dist:styles/main.css -->
             <!-- build:css tmp:styles/global.scss -->
                 <!-- import:css source:styles/global.scss -->
-                <!-- import:content module:**/imports/_css.html -->
+                <!-- import:content module:**/html/_css.html -->
                 <!-- import:css module:**/css/variables.scss -->
                 <!-- import:css module:**/css/global.scss -->
             <!-- endbuild -->
