Cleaned up and added a few mixins. Removed yet another reference to bootstrap

--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -8,9 +8,7 @@
  *
  * - Reset
  * - Utilities
- * - General<% if (includeBootstrap) { %>
- * - Bootstrap<% } %><% if (includeFoundation) { %>
- * - Foundation<% } %>
+ * - General
  * - Modules
 {{toc}}
  */
