--- a/app/templates/source/styles/imports/mixins.scss
+++ b/app/templates/source/styles/imports/mixins.scss
@@ -1,73 +1,81 @@
 // REM font sizing with pixel fall back
 // This technique will allow external font sizes to be set for html and respected
 // if REMs are supported (everything but IE8 and older).
-@mixin sq-font-size($sizeValue: 1){
-  font-size: ($sizeValue * $base-font-pixel) + px;
-  font-size: $sizeValue + rem;
+@mixin sq-font-size($sizeValue: 1) {
+    @include sq-rem-attr(font-size, $sizeValue);
+}
+
+// Express the value of an attribute using rems falling back to pixels
+@mixin sq-rem-attr($attr, $sizeValue: 1){
+    #{$attr}: ($sizeValue * $base-font-pixel) + px;
+    #{$attr}: $sizeValue + rem;
 }
 
 // Transition shortcut
-@mixin sq-transition($args: all 1s ease) {
-    -webkit-transition: $args;
-       -moz-transition: $args;
-            transition: $args;
+@mixin sq-transition($params: all 1s ease) {
+    -webkit-transition: $params;
+       -moz-transition: $params;
+            transition: $params;
+}
+
+// Apply a prefixed transformation
+@mixin sq-transform($params) {
+  -webkit-transform: $params; // Chrome, Safari 3.1+
+     //-moz-transform: $params; // Firefox 3.5-15
+      -ms-transform: $params; // IE 9
+          transform: $params;
 }
 
 // 2D rotation with IE support
 @mixin sq-rotate($deg) {
-  $msRotVal: (((360 + $deg) % 360) / 90);   // Modulo lets us handle negative values.
-    -webkit-transform: rotate($deg + deg);  // Chrome, Safari 3.1+
-       -moz-transform: rotate($deg + deg);  // Firefox 3.5-15
-        -ms-transform: rotate($deg + deg);  // IE 9
-         -o-transform: rotate($deg + deg);  // Opera 10.50-12.00
-            transform: rotate($deg + deg);  // Firefox 16+, IE 10+, Opera 12.10+
+    $msRotVal: (((360 + $deg) % 360) / 90);   // Modulo lets us handle negative values.
+    @include sq-transform(rotate($deg + deg));
     filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=#{$msRotVal});
 }
 
+
+@mixin sq-box-shadow($params) {
+    -webkit-box-shadow: $params;
+       -moz-box-shadow: $params;
+            box-shadow: $params;
+}
 // Glow effect taken from foundation
 @mixin sq-block-glowing-effect($selector:focus, $fade-time:300ms, $glowing-effect-color:blue) {
-  -webkit-transition: -webkit-box-shadow $fade-time, border-color $fade-time ease-in-out;
-  -moz-transition: -moz-box-shadow $fade-time, border-color $fade-time ease-in-out;
-  transition: box-shadow $fade-time, border-color $fade-time ease-in-out;
+    -webkit-transition: -webkit-box-shadow $fade-time, border-color $fade-time ease-in-out;
+       -moz-transition: -moz-box-shadow $fade-time, border-color $fade-time ease-in-out;
+            transition: box-shadow $fade-time, border-color $fade-time ease-in-out;
 
-  &:#{$selector} {
-    -webkit-box-shadow: 0 0 5px $glowing-effect-color;
-    -moz-box-shadow: 0 0 5px $glowing-effect-color;
-    box-shadow: 0 0 5px $glowing-effect-color;
-    border-color: $glowing-effect-color;
-  }
+    &:#{$selector} {
+        @include sq-box-shadow(0 0 5px $glowing-effect-color);
+        border-color: $glowing-effect-color;
+    }
 }
 
-// Border radius helper
+// Legacy border radius helper
 @mixin sq-border-radius($radius: 4px) {
-    border-radius: $radius;
-    -moz-border-radius: $radius;
     -webkit-border-radius: $radius;
+       -moz-border-radius: $radius;
+            border-radius: $radius;
+
 }
 
-// Box shadow (won't work in IE8 or older)
-@mixin sq-box-shadow($args...) {
-    -webkit-box-shadow: $args;
-     -moz-box-shadow: $args;
-          box-shadow: $args;
-}
-
-// Opacity
+// Opacity with IE filter fallback
+// Value should be expressed as a number between 0 and 100
+// with 0 being transparent and 100 being opaque
 @mixin sq-opacity($value) {
     $decimal-value: $value/100;
-    -khtml-opacity: $decimal-value;
     -webkit-opacity: $decimal-value;
-    -moz-opacity: $decimal-value;
-    opacity: $decimal-value;
+       -moz-opacity: $decimal-value;
+            opacity: $decimal-value;
     -ms-filter: #{"alpha(opacity=" + $value + ")"};
     filter: alpha(opacity=$value);
 }
 
 // Individual border radius rule helper.
 @mixin sq-rounded($vert, $horz, $radius: 10px) {
-    border-#{$vert}-#{$horz}-radius: $radius;
-    -moz-border-radius-#{$vert}#{$horz}: $radius;
     -webkit-border-#{$vert}-#{$horz}-radius: $radius;
+        -moz-border-radius-#{$vert}#{$horz}: $radius;
+            border-#{$vert}-#{$horz}-radius: $radius;
 }
 
 // Use an SVG background image (for perfect Retina-rendering) with a PNG fallback.
@@ -78,15 +86,29 @@
     }
 }
 
-// Flex the content to fit
+@mixin sq-flex-box() {
+    .no-js &,
+    .no-flexbox & {
+        display: table;
+    }
+    .flexbox & {
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+    }
+}
+
+// Apply flex to an element
 @mixin sq-flex($values) {
     // Table cell is a fallback to no flexbox support
     .flexbox & {
-      -webkit-box-flex: $values;
-      -moz-box-flex:  $values;
-      -webkit-flex:  $values;
-      -ms-flex:  $values;
-      flex:  $values;
+        -webkit-box-flex: $values;
+           -moz-box-flex:  $values;
+            -webkit-flex:  $values;
+                -ms-flex:  $values;
+                    flex:  $values;
     }
     .no-js &,
     .no-flexbox & {
@@ -101,4 +123,35 @@
     $tmp: ($numerator/$denominator);
     #{$prop}: #{$tmp}em;
     #{$prop}: calc(#{$numerator}em / #{$denominator});
+}
+
+// CSS arrow helper
+// $direction: top, left, right, bottom
+@mixin sq-arrow($direction: top, $color: #000, $size: 5px, $height: 0px) {
+    $_height: $size+$height;
+
+    height: 0;
+    width: 0;
+    content: ' ';
+    border-style: solid;
+
+    @if $direction == 'top' {
+        border-width: $size $size $_height $size;
+        border-color: transparent transparent $color transparent;
+    } @else if $direction == 'right' {
+        border-width: $size $size $size $_height;
+        border-color: transparent transparent transparent $color;
+    } @else if $direction == 'bottom' {
+        border-width: $_height $size $size $size;
+        border-color: $color transparent transparent transparent;
+    } @else if $direction == 'left' {
+        border-width: $size $_height $size $size;
+        border-color: transparent $color transparent transparent;
+    }
+}
+
+@mixin sq-inline-block() {
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
 }
