Changed the path to search for included JS & CSS from modules

--- a/app/templates/source/html/fragments/_head-single.html
+++ b/app/templates/source/html/fragments/_head-single.html
@@ -5,8 +5,8 @@
         <!-- build:sass dist:styles/main.css -->
             <!-- build:css tmp:styles/global.scss -->
                 <!-- import:css source:styles/global.scss -->
-                <!-- import:content module:**/html/_css.html -->
                 <!-- import:css module:**/css/variables.scss -->
+                <!-- import:content module:**/import/_css.html -->
                 <!-- import:css module:**/css/global.scss -->
             <!-- endbuild -->
             <!-- build:css tmp:styles/medium.scss { "media": "(min-width: <%= mediumMQ %>)" } -->
