--- a/app/templates/source/html/fragments/_head-ie8.html
+++ b/app/templates/source/html/fragments/_head-ie8.html
@@ -5,7 +5,7 @@
         <!-- build:sass dist:styles/global.css -->
                 <!-- import:css source:styles/global.scss -->
                 <!-- import:css module:**/css/variables.scss,module:**/css/global.scss -->
-                <!-- import:content module:**/html/_css.html -->
+                <!-- import:content module:**/import/_css.html -->
         <!-- endbuild -->
         <!-- build:sass dist:styles/medium.css { "media": "(min-width: <%= mediumMQ %>)" } -->
                 <!-- import:css source:styles/medium.scss -->
