Added keyword to prevent search crawls on squiz.net sites (e.g. clients.squiz.net)

--- a/app/templates/source/html/parse.html
+++ b/app/templates/source/html/parse.html
@@ -21,7 +21,7 @@
         <meta charset="utf-8" />
         <title><MySource_PRINT id_name="__global__" var="asset_name" /> - <MySource_PRINT id_name="__global__" var="site_name" /></title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+        %globals_site_url^contains:squiz.net:<meta name="robots" content="index,nofollow">:%
         <MySource_AREA id_name="metadata" design_area="metadata" />
 
         <link rel="shortcut icon" href="mysource_files/favicon.ico">
