--- a/app/templates/source/html/index.html
+++ b/app/templates/source/html/index.html
@@ -18,7 +18,7 @@
         </header><!-- /.header -->
     <!--endnoindex-->
             <!-- start main-content -->
-            <main class="main" role="main">
+            <main class="main" role="main" id="main">
 
             </main><!-- /#main -->
             <!-- end main-content -->
