Some more changes for generating documentation

--- a/app/templates/source/html/docs/index.html
+++ b/app/templates/source/html/docs/index.html
@@ -34,5 +34,6 @@
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
 <!-- import:content source:html/fragments/_foot.html -->
+<!-- import:content source:html/docs/fragments/_foot.html -->
     </body>
 </html>
