--- a/app/templates/source/html/docs/modules.html
+++ b/app/templates/source/html/docs/modules.html
@@ -17,7 +17,7 @@
             <!-- import:content source:html/docs/fragments/demo-menu.html -->
           </header><!-- /.header -->
     <!--endnoindex-->
-            <!-- import:content module:demo-heading-list/html/index.html -->
+            <div class="demo-heading-list"></div>
             <!-- start main-content -->
             <main class="main" role="main">
                 <!-- import:markdown module:**/README.md -->
@@ -30,5 +30,6 @@
     <!--endnoindex-->
     </div><!-- /#page-wrapper -->
 <!-- import:content source:html/fragments/_foot.html -->
+<!-- import:content source:html/docs/fragments/_foot.html -->
     </body>
 </html>
