--- a/module/templates/css/styles.scss
+++ b/module/templates/css/styles.scss
@@ -4,16 +4,14 @@
 // Multiline comments will be preserved, use them when you need to send comments
 // back out to the resulting .css file.
 
+// Tip: Most boilerplate modules follow guidelines set out in http://bem.info/ as a rule of 
+// thumb. You don't have to, but it helps with consistency and any class name collisions
+// with other styles. Example naming convention:
+// 
+// .<%= cssName %>__element { ... }
+// .<%= cssName %>__element--modifier { ... }
+// .<%= cssName %>__sub-element { ... }
+
 .<%= cssName %> {
     // Your styles here
-}
-
-.<%= cssName %>__item {
-    // Example element inside a module block
-    // Hint: You can remove this
-}
-
-.<%= cssName %>__link {
-    // Example element inside a module block
-    // Hint: You can remove this
 }
