--- a/module/templates/tests/spec.html
+++ b/module/templates/tests/spec.html
@@ -8,6 +8,7 @@
     <script src="../../../bower_components/qunit/qunit/qunit.js"></script>
     <!-- Load local lib and tests. -->
     <script src="../../../bower_components/jquery/dist/jquery.js"></script>
+    <script src="../../../bower_components/jquery/jquery.js"></script>
     <script src="../js/plugin.js"></script>
     <script src="spec.js"></script>
 </head>
