Updated documentation generator information

--- a/app/templates/source/html/docs/fragments/demo-menu.html
+++ b/app/templates/source/html/docs/fragments/demo-menu.html
@@ -2,13 +2,13 @@
     <div class="demo-menu__heading">Squiz Boilerplate</div>
     <ul class="demo-menu__list">
         <li class="demo-menu__item">
-            <a href="sass.html" class="demo-menu__link">Sass</a>
+            <a href="/" class="demo-menu__link">Core</a>
+        </li>
+        <li class="demo-menu__item">
+            <a href="styles.html" class="demo-menu__link">Styles</a>
         </li>
         <li class="demo-menu__item">
             <a href="modules.html" class="demo-menu__link">Modules</a>
-        </li>
-        <li class="demo-menu__item">
-            <a href="other.html" class="demo-menu__link">Other</a>
         </li>
     </ul>
 </nav>
