--- a/app/templates/source/html/docs/index.html
+++ b/app/templates/source/html/docs/index.html
@@ -17,14 +17,10 @@
             <!-- import:content source:html/docs/fragments/demo-menu.html -->
           </header><!-- /.header -->
     <!--endnoindex-->
+            <div class="demo-heading-list"></div>
             <!-- start main-content -->
             <main class="main" role="main">
-                <section class="demo">
-                    <div class="demo__inner">
-                        <h2 class="demo__heading">Core</h2>
-                        <p></p>
-                    </div>
-                </section>
+                <!-- import:markdown README.md -->
             </main><!-- /#main -->
             <!-- end main-content -->
     <!--noindex-->
