--- a/app/templates/source/html/docs/styles.html
+++ b/app/templates/source/html/docs/styles.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Sass - (version {{version}})</title>
+        <title>Styles - (version {{version}})</title>
 <!-- import:content source:html/docs/fragments/_head.html -->
     </head>
     <!--[if lt IE 7]><body class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
@@ -17,14 +17,10 @@
             <!-- import:content source:html/docs/fragments/demo-menu.html -->
           </header><!-- /.header -->
     <!--endnoindex-->
+            <div class="demo-heading-list"></div>
             <!-- start main-content -->
             <main class="main" role="main">
-                <section class="demo">
-                    <div class="demo__inner">
-                        <h2 class="demo__heading">Mixins</h2>
-                        <p>Some example usage of boilerplate mixins</p>
-                    </div>
-                </section>
+                <!-- import:markdown source:styles/README.md -->
             </main><!-- /#main -->
             <!-- end main-content -->
     <!--noindex-->
