--- a/app/templates/source/styles/imports/docs.scss
+++ b/app/templates/source/styles/imports/docs.scss
@@ -48,7 +48,7 @@ body {
 
 main {
     font-weight: 300;
-    margin-top: 4em;
+    margin-top: 1em;
     max-width: 1152px;
     margin-left: 300px;
 }
@@ -59,7 +59,7 @@ h1, h2 {
 
 .demo + .demo {
     border-top: 2px solid #ddd;
-    margin-top: 1em;
+    margin-top: 2em;
     padding-top: 1em;
 }
 
@@ -79,6 +79,31 @@ h1, h2 {
     }
 }
 
+table {
+    width: 100%;
+}
+
+td, th {
+    padding: .3em .8em;
+}
+
+th {
+    background: #222;
+    color: #fff;
+    text-align: left;
+}
+
+td + td {
+    border-left: 1px solid #ccc;
+}
+
+hr {
+    height: 0;
+    overflow: hidden;
+    border: 0;
+    border-bottom: 1px solid #ddd;
+}
+
 .demo__inner {
     @extend %border-box;
     margin: 1em;
@@ -92,10 +117,7 @@ h1, h2 {
 .demo-menu {
     background: $demo-menu__bg;
     overflow: hidden;
-    position: fixed;
     width: 100%;
-    top: 0;
-    z-index: 1000;
 }
 
 .demo-menu__heading {
@@ -175,7 +197,7 @@ h1, h2 {
 .demo-heading-list {
     position: absolute;
     top: 4em;
-    max-width: 280px;
+    width: 280px;
     z-index: 500;
     @extend %list-reset;
     border-right: 1px solid #ccc;
