Added the ability for modules to be able to import content in the foot or head of a design

--- a/app/templates/source/html/fragments/_foot.html
+++ b/app/templates/source/html/fragments/_foot.html
@@ -6,6 +6,7 @@
         <!-- import:js bower:jquery/jquery.js -->
         <!-- import:js bower:jquery/dist/jquery.js -->
     <!-- endbuild -->
+    <!-- import:content module:**/import/_foot.html -->
 <!--@@
     Plugin JS
     You can use this build directive to automatically combine supporting library files
