--- a/app/templates/source/html/fragments/_head-single.html
+++ b/app/templates/source/html/fragments/_head-single.html
@@ -25,3 +25,4 @@
         <!-- build:js dist:js/vendor/modernizr.min.js -->
             <!-- import:js bower:modernizr/modernizr.js -->
         <!-- endbuild -->
+        <!-- import:content module:**/import/_head.html -->
