--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -26,6 +26,16 @@ Reset (normalize.css)
 @import "normalize.scss";
 @import "normalize-opentype.scss";
 
+// Box size all the things
+// https://squizmap.squiz.net/imp-bp/6400
+// http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+html {
+    @include sq-border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 /*
 --------------------
 Utilities
