--- a/app/templates/source/styles/global.scss
+++ b/app/templates/source/styles/global.scss
@@ -29,6 +29,7 @@ Reset (normalize.css)
 // Box size all the things
 // https://squizmap.squiz.net/imp-bp/6400
 // http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+// == Start box-sizing reset ==
 *, *:before, *:after {
     -webkit-box-sizing: inherit;
        -moz-box-sizing: inherit;
@@ -37,6 +38,7 @@ Reset (normalize.css)
 html {
     @include sq-border-box;
 }
+// == End box-sizing reset ==
 
 /*
 --------------------
