--- a/app/templates/source/html/layouts/default.hbs
+++ b/app/templates/source/html/layouts/default.hbs
@@ -23,7 +23,7 @@
     <!--endnoindex-->
     <!-- start main-content -->
     <main class="main" role="main">
-
+        {{>body}}
     </main><!-- /#main -->
     <!-- end main-content -->
     <!--noindex-->
